# flask-filealchemy

./: .pyup.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: main.yml
example/: app.py  models.py
example/data/Author/: ayn-rand.yml
example/data/Book/: the-fountainhead.yml
example/data/books/: the-fountainhead.yml
flask_filealchemy/: __init__.py  common.py  filealchemy.py  loaders.py
src/flask_filealchemy/: __init__.py
tests/: conftest.py  test_filealchemy.py  test_loaders.py
