[tool.poetry]
name = "flask-filealchemy"
version = "0.3.0"
description = "YAML-formatted plain-text file based models for Flask backed by Flask-SQLAlchemy"
authors = ["Siddhant Goel <me@sgoel.org>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["flask", "sqlalchemy", "yaml", "plaintext", "web"]
url = "https://github.com/siddhantgoel/flask-filealchemy"

[tool.poetry.dependencies]
python = "^3.5"
flask = "^1.0"
flask-sqlalchemy = "^2.4"
ruamel-yaml = "^0.15.94"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flask = "^1.0"
isort = "^4.3"
pytest = "^4.4"
black = {version = "^18.3-alpha.0",allows-prereleases = true,python = "^3.6"}
mypy = "^0.720.0"

[tool.black]
line-length = 79
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
