[tool.poetry]
name = "flask-filealchemy"
version = "0.8.0"
description = "YAML-formatted plain-text file based models for Flask backed by Flask-SQLAlchemy"
readme = "README.md"
authors = ["Siddhant Goel <me@sgoel.dev>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["flask", "sqlalchemy", "yaml", "plaintext", "web"]
repository = "https://github.com/siddhantgoel/flask-filealchemy"
documentation = "https://github.com/siddhantgoel/flask-filealchemy"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2"
"flask-sqlalchemy" = "^3.0"
"ruamel.yaml" = "^0.17"
"python-frontmatter" = "^1.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0"
pytest = "^7.3"
black = "^23.3"
mypy = "^1.1"
"sqlalchemy-stubs" = "^0.4"

[tool.black]
line-length = 79
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
